--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -22,3 +22,5 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  mail_username: <%= ENV["GMAIL_EMAIL"] %>
+  mail_password: <%= ENV["GMAIL_PASSWORD"] %>
