--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-on-rails": "6.8.0",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "webpack": "^2.2.1"
   },
   "devDependencies": {}
